# Autonomous_Robotics

./: README.md
ar_loc_base/launch/: test_ar.launch  test_mapping.launch
ar_loc_base/nodes/: rover_loc.py
ar_mapping_base/launch/: test_ar.launch
ar_mapping_base/nodes/: rover_mapping.py
ar_slam_base/launch/: test_ar.launch  turtle_slam.launch
ar_slam_base/nodes/: rover_mapping.py
collision_detection/: CMakeLists.txt  package.xml
collision_detection/launch/: collision_detection.launch
collision_detection/scripts/: regulator_cmd.py
collision_detection/src/: collision_detection.cpp  collision_detection.hpp
face_detect_base/: CMakeLists.txt
face_detect_base/nodes/: rosfacedetect.py
floor_nav/: CMakeLists.txt  package.xml
floor_nav/cfg/: TaskGoTo.cfg  TaskGoToPose.cfg  TaskStareAtFace.cfg  TaskWaitForFace.cfg
floor_nav/launch/: launch_rover.launch
floor_nav/missions/: test_goto.py  test_wander.py  test_wander_face_detection.py
floor_nav/src/: SimTasksEnv.cpp
floor_nav/tasks/: TaskGoTo.cpp  TaskGoToPose.cpp  TaskGoToPose.h  TaskMoveGoal.cpp  TaskMoveGoal.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskWaitForFace.cpp  TaskWaitForFace.h
obstacle_avoidance_base/launch/: ca_teleop.launch  planner.launch
obstacle_avoidance_base/src/: obstacle_avoidance.cpp
occgrid_planner_base/: CMakeLists.txt  package.xml
occgrid_planner_base/launch/: planner.launch  planner_turtle.launch
robot_teleop_joy/: CMakeLists.txt  package.xml
robot_teleop_joy/launch/: robot_teleop_joy.launch
robot_teleop_joy/scripts/: robot_teleop_joy.py
robot_teleop_joy/src/: robot_teleop_joy.cpp  robot_teleop_joy.hpp
(+18 files in other folders)
